[package]
name = "keysd_rs"
version = "0.1.0"
description = "gPRC based keysd integration library"
license = "MIT"
authors = ["Charles Cunningham <c.a.cunningham6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.8"
protobuf = "2.20"
futures = "0.3"

[build-dependencies]
protoc-rust-grpc = "0.8"
